--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Counter</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <h1>Tags</h1>
+    <h2>Block</h2>
+    <h2>Inline</h2>
+    <br>
+    <h1>Priorities</h1>
+    <h2>Style</h2>
+    <h2>ID</h2>
+    <h2>Class</h2>
+    <h2>Tag</h2>
+    <br>
+    <h1>Position</h1>
+    <h2>Absolute</h2>
+    <h2>Relative</h2>
+    <h2>Sticky</h2>
+    <h2>Fixed</h2>
+    <h2>Static</h2>
 </body>
 </html>
